--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cypress": "^10.10.0",
     "date-fns": "^2.29.3",
     "feather-icons": "4.29.0",
+    "jquery": "^3.6.3",
     "js-file-downloader": "^1.1.24",
     "lodash": "^4.17.21",
     "object-to-formdata": "^4.4.2",
@@ -37,6 +38,7 @@
     "vue-axios": "^3.5.2",
     "vue-i18n": "^9.2.2",
     "vue-instantsearch": "4.4.2",
+    "vue-pdf": "^4.3.0",
     "vue-router": "4.1.4",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.0",
